# backend/api/oas_client_gen.go
@@ -125,6 +125,12 @@ type TransactionsInvoker interface {
 	//
 	// GET /transactions/{id}
 	GetTransactions(ctx context.Context, params GetTransactionsParams) (GetTransactionsRes, error)
+	// RefundTransaction invokes refundTransaction operation.
+	//
+	// Refund a Transaction.
+	//
+	// POST /transactions/{id}/refund
+	RefundTransaction(ctx context.Context, params RefundTransactionParams) (RefundTransactionRes, error)
 	// RejectTransaction invokes rejectTransaction operation.
 	//
 	// Reject a Transaction.
@@ -1645,6 +1651,99 @@ func (c *Client) sendLoginUser(ctx context.Context, request *LoginData) (res Log
 
 	stage = "DecodeResponse"
 	result, err := decodeLoginUserResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// RefundTransaction invokes refundTransaction operation.
+//
+// Refund a Transaction.
+//
+// POST /transactions/{id}/refund
+func (c *Client) RefundTransaction(ctx context.Context, params RefundTransactionParams) (RefundTransactionRes, error) {
+	res, err := c.sendRefundTransaction(ctx, params)
+	return res, err
+}
+
+func (c *Client) sendRefundTransaction(ctx context.Context, params RefundTransactionParams) (res RefundTransactionRes, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("refundTransaction"),
+		semconv.HTTPRequestMethodKey.String("POST"),
+		semconv.URLTemplateKey.String("/transactions/{id}/refund"),
+	}
+	otelAttrs = append(otelAttrs, c.cfg.Attributes...)
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(elapsedDuration)/float64(time.Millisecond), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, RefundTransactionOperation,
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [3]string
+	pathParts[0] = "/transactions/"
+	{
+		// Encode "id" parameter.
+		e := uri.NewPathEncoder(uri.PathEncoderConfig{
+			Param:   "id",
+			Style:   uri.PathStyleSimple,
+			Explode: false,
+		})
+		if err := func() error {
+			return e.EncodeValue(conv.StringToString(params.ID))
+		}(); err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		encoded, err := e.Result()
+		if err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		pathParts[1] = encoded
+	}
+	pathParts[2] = "/refund"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "POST", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	body := resp.Body
+	defer body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeRefundTransactionResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
