# backend/api/oas_parameters_gen.go
@@ -874,6 +874,72 @@ func decodeLinkAccountParams(args [1]string, argsEscaped bool, r *http.Request) 
 	return params, nil
 }
 
+// RefundTransactionParams is parameters of refundTransaction operation.
+type RefundTransactionParams struct {
+	// Transaction ID.
+	ID string
+}
+
+func unpackRefundTransactionParams(packed middleware.Parameters) (params RefundTransactionParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "id",
+			In:   "path",
+		}
+		params.ID = packed[key].(string)
+	}
+	return params
+}
+
+func decodeRefundTransactionParams(args [1]string, argsEscaped bool, r *http.Request) (params RefundTransactionParams, _ error) {
+	// Decode path: id.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "id",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToString(val)
+				if err != nil {
+					return err
+				}
+
+				params.ID = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "id",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
 // RejectTransactionParams is parameters of rejectTransaction operation.
 type RejectTransactionParams struct {
 	// Transaction ID.
