# backend/openapi.yaml
@@ -279,28 +279,6 @@ paths:
         500:
           $ref: '#/components/responses/InternalServerError'
 
-  /transactions/{id}/reject:
-    x-ogen-operation-group: Transactions
-    parameters:
-      - name: id
-        in: path
-        required: true
-        description: Transaction ID
-        schema:
-          type: string
-    post:
-      operationId: rejectTransaction
-      summary: Reject a Transaction
-      responses:
-        204:
-          description: Transaction completed successfully
-        400:
-          $ref: '#/components/responses/BadRequest'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/InternalServerError'
-
   /transactions/{id}/cancel:
     x-ogen-operation-group: Transactions
     parameters:
@@ -313,6 +291,50 @@ paths:
     post:
       operationId: cancelTransaction
       summary: Cancel a Transaction
+      responses:
+        204:
+          description: Transaction completed successfully
+        400:
+          $ref: '#/components/responses/BadRequest'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+  /transactions/{id}/refund:
+    x-ogen-operation-group: Transactions
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: Transaction ID
+        schema:
+          type: string
+    post:
+      operationId: refundTransaction
+      summary: Refund a Transaction
+      responses:
+        204:
+          description: Transaction refunded successfully
+        400:
+          $ref: '#/components/responses/BadRequest'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+  /transactions/{id}/reject:
+    x-ogen-operation-group: Transactions
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: Transaction ID
+        schema:
+          type: string
+    post:
+      operationId: rejectTransaction
+      summary: Reject a Transaction
       responses:
         204:
           description: Transaction completed successfully
